# IBM_Python_Project_For_Data_Engineering

./: .gitignore  ETL - Part 2.ipynb  README.md  Webscraping.ipynb  logfile.txt  pyproject.toml
data/: bank_market_cap.json  bank_market_cap_GBP.csv  exchange_rates.csv  transformed_data.csv
logs/: logfile.txt
notebooks/: ETL.ipynb  Extract API Data.ipynb
src/etl/: bank_info_scraper.py  etl.py  extract.py  load.py  transform.py
src/webscrapping/: bank_info_scraper.py  exchange_rate_api_scraper.py
tests/: test_etl.py  test_extract.py  test_load.py  test_transform.py
