[tool.poetry]
name = "ibm-python-project-for-data-engineering"
version = "0.1.0"
description = ""
authors = ["Daniel Chaves <danielmschaves@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.11,<3.13"
requests = "^2.31.0"
beautifulsoup4 = "^4.12.2"
html5lib = "^1.1"
pandas = "^2.1.1"
pytest = "^7.4.2"


[tool.poetry.group.dev.dependencies]
pytest = "^7.4.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
